--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>William Chia • Tools Prototype</title>
+  <title>wchiayy - Tools Prototype</title>
   <style>
     body {
       font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -67,8 +67,8 @@
 </head>
 <body>
   <header>
-    <h1>William Chia — Tools Prototype</h1>
-    <p>Central hub linking all work-related calculators, demo tools, and HTML projects</p>
+    <h1>wchiayy — Tools Prototype</h1>
+    <p>Prototypes and calculators</p>
   </header>
 
   <div class="container">
@@ -77,12 +77,10 @@
         <div class="card-title">Factoring Calculator</div>
         <p>Compute advance rates, fees, and effective costs for factoring scenarios.</p>
       </a>
-       <div class="container">
-    <div class="link-grid">
       <a href="abl-calculator.html" class="card">
         <div class="card-title">ABL Calculator</div>
         <p>Compute indicative valuations and loan sizing for ABL.</p>
-      </a><!-- Add more links by duplicating the card block -->
+      </a>
     </div>
   </div>
 
